sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 164 64 xxx
simstep 6 1
